# portfolio-rs

./: .gitignore  Cargo.toml  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/api/: fetch.rs  mod.rs
src/components/: body.rs  cloudinary_image.rs  contact_form.rs  error_message.rs  footer.rs  header.rs  input_toggle.rs  mailto_link.rs  mod.rs  navigation.rs  social_media_icons.rs  success_message.rs  util.rs  web_project.rs
src/components/layout/: footer.rs  header.rs  headings.rs  mod.rs  page.rs  paragraph.rs
src/pages/: contact.rs  home.rs  mod.rs  not_found.rs  web.rs
static/css/: main.css
