[package]
name = "portfolio"
version = "0.1.0"
authors = ["Tyler Earls <tyler.a.earls@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A website demonstrating the programming portfolio of the author, Tyler Earls. Built lovingly with Rust."

[dependencies]
yew = "0.19.3"
reqwest-wasm = "0.11.0"
wasm-logger = "0.2.0"
log = "0.4.16"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.48", features = ["derive"] }
serde_json = "1.0.79"

# https://github.com/chronotope/chrono/issues/382
[dependencies.chrono]
version = "0.4.19"
features = ["wasmbind", "js-sys"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test"]