[package]
name = "portfolio"
version = "0.1.0"
authors = ["Tyler Earls <tyler.a.earls@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A website demonstrating the programming portfolio of the author, Tyler Earls. Built lovingly with Rust."

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
web-sys = "0.3.57"
regex = "1.5.5"
lazy_static = "1.4.0"

# rust logging
log = "0.4.16"

# web logging
# Defaults to web-sys implementation (same as yew)
weblog = "0.3.0"

# wasm logging
reqwest-wasm = "0.11.0"
wasm-logger = "0.2.0"

# https://github.com/chronotope/chrono/issues/382
[dependencies.chrono]
version = "0.4.19"
features = ["wasmbind", "js-sys"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]